# thegreatestbot

./: .gitignore  README  bot_service.service  commands.txt  erkat_bot.py  pyproject.toml  requirements.txt
