[tool.poetry]
name = "thegreatestbot"
version = "0.1.0"
description = "The greatest bot of all time"
authors = ["PatriosTheGreat"]

[tool.poetry.dependencies]
python = "^3.8"
forex-python = "1.5"
python-telegram-bot = "13.0"
profanity-filter = {version = "1.3.3", extras = ["pymorphy2-ru"]}

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz"


[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
